--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username:
 github_username:  msaxton
 
 # Build settings
-theme: jekyll-theme-slate
+theme: minima
 plugins:
   - jekyll-feed
 
